@@ -202,9 +202,6 @@ plugin.tx_solr {
 			}
 
 			ignorePageBrowser = 0
-
-			markResultTypeBoundaries = 0
-			markResultTypeBoundaries.typeField = type
 		}
 
 		spellchecking = 0
